--- a/stories/index.html
+++ b/stories/index.html
@@ -278,7 +278,7 @@
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#hi0253">hi</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#hi0253">hi</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -354,6 +354,8 @@
 <li class="toc"><a href="#spanish">Spanish [Español]</a></li><br>
 
 <li class="toc"><a href="#swedish">Swedish [svenska]</a></li><br>
+
+<li class="toc"><a href="#tagalog">Tagalog [Tagalog]</a></li><br>
 
 <ol>
 </ol></div>
@@ -1439,6 +1441,29 @@
       <td style="text-align: center"><a href="/stories/sv/0204_akatope.html">HTML</a> · <a href="/stories/sv/0204_akatope_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/sv.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/u9o5vfvq09o857b/sv.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsNEVzYlpFTEZnc0E/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="sv0204"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='tagalog'>Tagalog [Tagalog]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Story title</th>
+      <th style="text-align: center">View</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0253</td>
+      <td>Aking libro ng larawan</td>
+      <td style="text-align: center"><a href="/stories/tl/0253_aking-libro-ng-larawan.html">HTML</a> · <a href="/stories/tl/0253_aking-libro-ng-larawan_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
+      <td><a name="tl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
