zh: add 4 new stories

--- a/stories/index.html
+++ b/stories/index.html
@@ -188,7 +188,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0087">es</a>, <a href="#hi0087">hi</a>, <a href="#sv0087">sv</a></td>
+      <td><a href="#es0087">es</a>, <a href="#hi0087">hi</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -200,7 +200,7 @@
       <td>0095</td>
       <td><a href="http://africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#hi0095">hi</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a></td>
+      <td><a href="#hi0095">hi</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -386,7 +386,7 @@
       <td>0360</td>
       <td><a href="http://africanstorybook.org/stories/counting-cats">Counting cats</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/4.0/">CC-BY-NC</a></td>
-      <td><a href="#hi0360">hi</a></td>
+      <td><a href="#hi0360">hi</a>, <a href="#zh0360">zh</a></td>
     </tr>
   </tbody>
 </table>
@@ -824,11 +824,25 @@
       <td><a name="zh0086"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0087</td>
+      <td>我喜欢看书</td>
+      <td style="text-align: center"><a href="/stories/zh/0087_我喜欢看书.html">HTML</a> · <a href="/stories/zh/0087_我喜欢看书_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="zh0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0093</td>
       <td>宝贝儿子</td>
       <td style="text-align: center"><a href="/stories/zh/0093_宝贝儿子.html">HTML</a> · <a href="/stories/zh/0093_宝贝儿子_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="zh0093"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td>赞玛很棒！</td>
+      <td style="text-align: center"><a href="/stories/zh/0095_赞玛很棒.html">HTML</a> · <a href="/stories/zh/0095_赞玛很棒_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="zh0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -990,6 +1004,13 @@
       <td style="text-align: center"><a href="/stories/zh/0331_雨.html">HTML</a> · <a href="/stories/zh/0331_雨_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="zh0331"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0360</td>
+      <td>数猫</td>
+      <td style="text-align: center"><a href="/stories/zh/0360_数猫.html">HTML</a> · <a href="/stories/zh/0360_数猫_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="zh0360"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
   </tbody>
 </table>
