--- a/stories/zh/0086_我在学校做什么.html
+++ b/stories/zh/0086_我在学校做什么.html
@@ -77,7 +77,7 @@ Ivan Higenyi<br>中文</div>
 
 <p><img src="https://global-asp.github.io/img/0086/08.jpg" /></p>
 
-<p>还有我跟老师和朋友一起去学校的花园。</p>
+<p>我还跟老师和朋友一起去学校的花园。</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
@@ -91,12 +91,12 @@ Ivan Higenyi<br>中文</div>
 
 <p><img src="https://global-asp.github.io/img/0086/10.jpg" /></p>
 
-<p>你在学校做什么呢？</p>
+<p>你在你的学校做什么呢？</p>
 
 <div class="pagenum">9</div>
 <p style="page-break-after: always;"></p>
 
-<p>Text: Ivan Higenyi<br />Illustrations: Wiehan de Jager, Karlien de Villiers, Alice Toich, Kathy Arbuckle, Jano Strydom, Vusi Malindi, Catherine Groenewald and Candace di Talamo<br />Translation: dohliam<br />Language: Chinese (Mandarin)</p>
+<p>Text: Ivan Higenyi<br />Illustrations: Wiehan de Jager, Karlien de Villiers, Alice Toich, Kathy Arbuckle, Jano Strydom, Vusi Malindi, Catherine Groenewald, Candace di Talamo<br />Translation: dohliam<br />Language: Chinese (Mandarin)</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/things-i-do-school-0">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
