--- a/stories/zh/0087_我喜欢看书_slides.html
+++ b/stories/zh/0087_我喜欢看书_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="我在学校做什么" class="slide level1">
-<h1>我在学校做什么</h1>
+<section id="我喜欢看书" class="slide level1">
+<h1>我喜欢看书</h1>
 <center>
-<img src="https://global-asp.github.io/img/0086/01.jpg" />
+<img src="https://global-asp.github.io/img/0087/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/02.jpg" /></p>
-<p>我跟朋友一起看书。</p>
+<p><img src="https://global-asp.github.io/img/0087/02.jpg" /></p>
+<p>我喜欢看书。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/03.jpg" /></p>
-<p>我学会写数字。</p>
+<p><img src="https://global-asp.github.io/img/0087/03.jpg" /></p>
+<p>我可以念给谁听呢？</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/04.jpg" /></p>
-<p>我学会写字母。</p>
+<p><img src="https://global-asp.github.io/img/0087/04.jpg" /></p>
+<p>小妹妹正在熟睡。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/05.jpg" /></p>
-<p>我跟朋友一起玩。</p>
+<p><img src="https://global-asp.github.io/img/0087/05.jpg" /></p>
+<p>我可以念给谁听呢？</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/06.jpg" /></p>
-<p>我在学校唱歌。</p>
+<p><img src="https://global-asp.github.io/img/0087/06.jpg" /></p>
+<p>妈妈和奶奶正在忙。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/07.jpg" /></p>
-<p>我也可以跳舞。</p>
+<p><img src="https://global-asp.github.io/img/0087/07.jpg" /></p>
+<p>我可以念给谁听呢？</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/08.jpg" /></p>
-<p>我还跟老师和朋友一起去学校的花园。</p>
+<p><img src="https://global-asp.github.io/img/0087/08.jpg" /></p>
+<p>爸爸和爷爷正在忙。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/09.jpg" /></p>
-<p>在睡午觉前老师给我们唱首催眠曲。</p>
+<p><img src="https://global-asp.github.io/img/0087/09.jpg" /></p>
+<p>我可以念给谁听呢？我可以念给自己听！</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,21 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/10.jpg" /></p>
-<p>你在你的学校做什么呢？</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="我在学校做什么-1">我在学校做什么</h2>
-Text: Ivan Higenyi<br> Illustrations: Wiehan de Jager, Karlien de Villiers, Alice Toich, Kathy Arbuckle, Jano Strydom, Vusi Malindi, Catherine Groenewald, Candace di Talamo<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<h2 id="我喜欢看书-1">我喜欢看书</h2>
+Text: Letta Machoga<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/things-i-do-school-0'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/i-read'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
