--- a/stories/zh/0095_赞玛很棒_slides.html
+++ b/stories/zh/0095_赞玛很棒_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="我在学校做什么" class="slide level1">
-<h1>我在学校做什么</h1>
+<section id="赞玛很棒" class="slide level1">
+<h1>赞玛很棒！</h1>
 <center>
-<img src="https://global-asp.github.io/img/0086/01.jpg" />
+<img src="https://global-asp.github.io/img/0095/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/02.jpg" /></p>
-<p>我跟朋友一起看书。</p>
+<p><img src="https://global-asp.github.io/img/0095/02.jpg" /></p>
+<p>我弟弟睡过头了。我很早起床，因为我很棒！</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/03.jpg" /></p>
-<p>我学会写数字。</p>
+<p><img src="https://global-asp.github.io/img/0095/03.jpg" /></p>
+<p>是我让阳光透进来。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/04.jpg" /></p>
-<p>我学会写字母。</p>
+<p><img src="https://global-asp.github.io/img/0095/04.jpg" /></p>
+<p>妈妈说：“你是我的晨星”。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/05.jpg" /></p>
-<p>我跟朋友一起玩。</p>
+<p><img src="https://global-asp.github.io/img/0095/05.jpg" /></p>
+<p>我自己洗澡。我不需要帮忙。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/06.jpg" /></p>
-<p>我在学校唱歌。</p>
+<p><img src="https://global-asp.github.io/img/0095/06.jpg" /></p>
+<p>冷冷的水和臭臭的蓝色肥皂对我来说不算大事。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/07.jpg" /></p>
-<p>我也可以跳舞。</p>
+<p><img src="https://global-asp.github.io/img/0095/07.jpg" /></p>
+<p>妈妈提醒我：“别忘了刷牙。”我回答：“怎么可能，我不会忘了的！”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/08.jpg" /></p>
-<p>我还跟老师和朋友一起去学校的花园。</p>
+<p><img src="https://global-asp.github.io/img/0095/08.jpg" /></p>
+<p>洗好了以后，我跟爷爷和姑妈打个招呼，向他们问好。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/09.jpg" /></p>
-<p>在睡午觉前老师给我们唱首催眠曲。</p>
+<p><img src="https://global-asp.github.io/img/0095/09.jpg" /></p>
+<p>然后我自己穿好衣服。“妈，我已经长大了！”</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/10.jpg" /></p>
-<p>你在你的学校做什么呢？</p>
+<p><img src="https://global-asp.github.io/img/0095/10.jpg" /></p>
+<p>我会自己扣好衣扣和鞋子。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,12 +177,39 @@
 </section>
 <section class="slide level1">
 
-<h2 id="我在学校做什么-1">我在学校做什么</h2>
-Text: Ivan Higenyi<br> Illustrations: Wiehan de Jager, Karlien de Villiers, Alice Toich, Kathy Arbuckle, Jano Strydom, Vusi Malindi, Catherine Groenewald, Candace di Talamo<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<p><img src="https://global-asp.github.io/img/0095/11.jpg" /></p>
+<p>在上学的路上我跟弟弟说学校的所有消息。</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0095/12.jpg" /></p>
+<p>上课的时候我认真学习。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0095/13.jpg" /></p>
+<p>我每天做这几件好事。可是我最喜欢做的是玩玩玩！</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="赞玛很棒-1">赞玛很棒！</h2>
+Text: Michael Oguttu<br> Illustrations: Vusi Malindi<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/things-i-do-school-0'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/zama-great'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
