--- a/stories/zh/0360_数猫_slides.html
+++ b/stories/zh/0360_数猫_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="我在学校做什么" class="slide level1">
-<h1>我在学校做什么</h1>
+<section id="数猫" class="slide level1">
+<h1>数猫</h1>
 <center>
-<img src="https://global-asp.github.io/img/0086/01.jpg" />
+<img src="https://global-asp.github.io/img/0360/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/02.jpg" /></p>
-<p>我跟朋友一起看书。</p>
+<p><img src="https://global-asp.github.io/img/0360/02.jpg" /></p>
+<p>几只猫？零只猫。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/03.jpg" /></p>
-<p>我学会写数字。</p>
+<p><img src="https://global-asp.github.io/img/0360/03.jpg" /></p>
+<p>几只猫？一只猫。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/04.jpg" /></p>
-<p>我学会写字母。</p>
+<p><img src="https://global-asp.github.io/img/0360/04.jpg" /></p>
+<p>几只猫？两只猫。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/05.jpg" /></p>
-<p>我跟朋友一起玩。</p>
+<p><img src="https://global-asp.github.io/img/0360/05.jpg" /></p>
+<p>几只猫？三只猫。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/06.jpg" /></p>
-<p>我在学校唱歌。</p>
+<p><img src="https://global-asp.github.io/img/0360/06.jpg" /></p>
+<p>几只猫？四只猫。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/07.jpg" /></p>
-<p>我也可以跳舞。</p>
+<p><img src="https://global-asp.github.io/img/0360/07.jpg" /></p>
+<p>几只猫？五只猫。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/08.jpg" /></p>
-<p>我还跟老师和朋友一起去学校的花园。</p>
+<p><img src="https://global-asp.github.io/img/0360/08.jpg" /></p>
+<p>几只猫？六只猫。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/09.jpg" /></p>
-<p>在睡午觉前老师给我们唱首催眠曲。</p>
+<p><img src="https://global-asp.github.io/img/0360/09.jpg" /></p>
+<p>几只猫？七只猫。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0086/10.jpg" /></p>
-<p>你在你的学校做什么呢？</p>
+<p><img src="https://global-asp.github.io/img/0360/10.jpg" /></p>
+<p>几只猫？八只猫。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,18 +177,36 @@
 </section>
 <section class="slide level1">
 
-<h2 id="我在学校做什么-1">我在学校做什么</h2>
-Text: Ivan Higenyi<br> Illustrations: Wiehan de Jager, Karlien de Villiers, Alice Toich, Kathy Arbuckle, Jano Strydom, Vusi Malindi, Catherine Groenewald, Candace di Talamo<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
+<p><img src="https://global-asp.github.io/img/0360/11.jpg" /></p>
+<p>我们这里看到了什么？有一只猫在树上爬不下来了！“我来救救你！”</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://global-asp.github.io/img/0360/12.jpg" /></p>
+<p>“妈妈，我们可以养它吗？就多养一只了！”几只猫？九只猫。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="数猫-1">数猫</h2>
+Text: Nina Orange<br> Illustrations: Jesse Breytenbach<br> Translation: dohliam<br> Language: Chinese (Mandarin)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/things-i-do-school-0'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/counting-cats'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
